# WonderfulWorld

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE
main/: CMakeLists.txt
main/src/: main.cpp
slimenano/: .gitignore  CMakeLists.txt  SlimenanoCmakeUtils.cmake
slimenano-cmake-utils/: SlimenanoCmakeUtils.cmake
slimenano-cmake-utils/cmake/: SlimenanoSubProject.cmake.in  SlimenanoSubProjectEntry.cpp.in  slimenano-version.h.in
slimenano/Audio/: slaudio.slimenano.project
slimenano/Audio/src/: slaudio.cpp  slaudio.h
slimenano/Event/: CMakeLists.txt  slevt.slimenano.project
slimenano/Event/src/: slevt.cpp  slevt.h
slimenano/Event/src/slevt/: dispatcher.cpp  dispatcher.h  event.cpp  event.h
slimenano/Logger/: slogger.slimenano.project
slimenano/Logger/src/: slogger.cpp  slogger.h
slimenano/Math/: CMakeLists.txt
slimenano/Math/src/: slm.cpp  slm.h
slimenano/Math/src/slm/: slm-matrix.h  slm-vector.h
slimenano/Serialization/src/: slz.cpp  slz.h
slimenano/UI/: CMakeLists.txt
slimenano/UI/src/: slui.cpp  slui.h
slimenano/UI/src/slui/: style.h  view.h
slimenano/UI/src/slui/window/: window.h
slimenano/cmake/: SlimenanoProject.cmake.in  SlimenanoSubProjectEntry.h.in  slimenanoConfig.cmake  slimenanoConfig.cmake.in
slimenano/event/: CMakeLists.txt
slimenano/event/src/: slevt.cpp  slevt.h
slimenano/include/: slimenano-api.h  slimenano-version.h
slimenano/math/: CMakeLists.txt
slimenano/math/src/: slm.cpp  slm.h
slimenano/math/src/slm/: slm-matrix.h  slm-vector.h
slimenano/ui/: CMakeLists.txt
slimenano/ui/src/: slui.cpp  slui.h
slimenano/ui/src/slui/: style.h  view.h
slimenano/ui/src/slui/window/: window.h
